# HMGCC-Security-App-Project

./: .gitignore  CLAUDE.md  CONSOLIDATED TEST REPORT Security R.md  HMGCC Security SPA .txt  HMGCC_Application_Submission.md  HMGGCC SPA Review Report 150426.md  Test-Outcomes-1.md
security-research-assistant/: .env.example  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  SKILLS.md  START_SRA.bat  STOP_SRA.bat  TASKS.md  config.yaml  package.json  pyproject.toml  start_backend.bat
security-research-assistant/backend/: __init__.py  config.py  dependencies.py  main.py
security-research-assistant/backend/middleware/: __init__.py  error_handler.py  logging.py
security-research-assistant/backend/schemas/: __init__.py  responses.py
security-research-assistant/core/: __init__.py  exceptions.py  logging.py
security-research-assistant/core/architecture/: __init__.py  extractor.py  mapper.py  visualiser.py
security-research-assistant/core/conversation/: __init__.py  manager.py  memory.py  summariser.py
security-research-assistant/core/database/: __init__.py  connection.py  schema.py
security-research-assistant/core/ingest/: chunker.py  detector.py  embedder.py  metadata_repair.py  pipeline.py  translator.py
security-research-assistant/core/models/: __init__.py  conversation.py  document.py  profile.py  project.py  query.py
security-research-assistant/core/profile/: __init__.py  adapter.py  proactive.py  tracker.py
security-research-assistant/core/rag/: __init__.py  context_builder.py  engine.py  fusion.py  keyword_search.py  llm_client.py  reranker.py  response_parser.py  search_models.py  vector_search.py
security-research-assistant/core/reports/: __init__.py  exporter.py  generator.py  templates.py
security-research-assistant/core/validation/: __init__.py  confidence.py  cross_reference.py  hallucination.py  pipeline.py  source_tier.py
security-research-assistant/core/vector_store/: __init__.py  chroma_client.py
security-research-assistant/data/sample_project/: component_inventory.csv  firmware_main.c  forum_discussion_modbus.txt  security_assessment_notes.txt
security-research-assistant/docs/: USER_STORIES.md  admin_guide.md  api_reference.md  performance_report.md  security_review.md  user_guide.md
security-research-assistant/docs/handover/: demo_script.md  deployment_guide.md  future_roadmap.md  known_limitations.md  technical_overview.md  test_report.md
security-research-assistant/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
security-research-assistant/scripts/: build_backend.py  build_installer.py  dev.py  final_verification.py  launcher.py  load_sample_project.py  update.py
security-research-assistant/tests/: __init__.py  conftest.py  test_chroma.py  test_config.py  test_database.py  test_health.py  test_models.py
(+132 files in other folders)
