[project]
name = "security-research-assistant"
version = "0.1.0"
description = "Smart Personal Assistant for Security Researchers - HMGCC Co-Creation Challenge"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",

    # LLM & RAG
    "ollama>=0.3.0",
    "llama-index>=0.11.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-embeddings-ollama>=0.3.0",

    # Vector database
    "chromadb>=0.5.0",

    # Document processing
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.4.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # Code analysis
    "tree-sitter>=0.22.0",

    # Search
    "rank-bm25>=0.2.2",

    # Report generation
    "reportlab>=4.2.0",

    # Utilities
    "pyyaml>=6.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
